--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1 id="title">re-building...</h1>
+  <h1 id="title">building</h1>
   <div id="container"></div>
 
   <script src="script.js"></script>
