--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>re-building...</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>re-building...</title>
+
+  <!-- Collegamento al foglio di stile -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <!-- Titolo principale, verrà centrato con CSS -->
   <h1 id="title">re-building...</h1>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Contenitore dei blocchi (gli edifici verranno costruiti qui) -->
   <div id="container"></div>
 
+  <!-- Collegamento al file JavaScript (che costruisce gli edifici) -->
   <script src="script.js"></script>
+
 </body>
 </html>
-
-
