--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
   <div class="center-container" id="text-container">
-    <!-- Le scritte saranno generate con JS -->
+    <span class="label">works</span>
+    <span class="label">papers</span>
+    <span class="label">info</span>
+    <span class="label">contacts</span>
   </div>
 
   <div id="layout-indicator">
