--- a/Works/works.html
+++ b/Works/works.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Works</title>
-  <link rel="stylesheet" href="works.css" />
+  <link rel="stylesheet" href="Works/Works.css" />
 </head>
 <body>
 
