--- a/Works/works.html
+++ b/Works/works.html
@@ -13,6 +13,6 @@
     <div class="work-details" id="work-details">Seleziona un progetto</div>
   </div>
 
-  <script src="works.js"></script>
+  <script src="Works/Works.js></script>
 </body>
 </html>
