--- a/Works/works.html
+++ b/Works/works.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Works</title>
-  <link rel="stylesheet" href="Works/Works.css" />
+  <link rel="stylesheet" href="Works.css" />
 </head>
 <body>
 
@@ -13,6 +13,6 @@
     <div class="work-details" id="work-details">Seleziona un progetto</div>
   </div>
 
-  <script src="Works/Works.js></script>
+  <script src="Works.js"></script>
 </body>
 </html>
