--- a/Works/works.html
+++ b/Works/works.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 
-  <!-- Indicatori layout, data e posizione cursore -->
-  <div id="layout-indicator" style="display: flex; gap: 20px; padding: 10px;">
-    <span id="layout-text">Reality -</span>
-    <span class="date-time">--/--/---- --:--:--</span>
-    <span id="cursor-position">x: -, y: -</span>
-  </div>
-
   <div class="works-container">
     <div class="works-list" id="works-list"></div>
     <div class="work-details" id="work-details">Seleziona un progetto</div>
+  </div>
+
+  <!-- Indicatore fisso in basso: data, ora, reality, posizione cursore -->
+  <div id="layout-indicator">
+    <div class="date-time" id="date-time">--:--:--</div>
+    <div id="reality-number">Reality: 0</div>
+    <div id="cursor-pos">Cursor: 0, 0</div>
   </div>
 
   <script src="Works.js"></script>
