--- a/Works/works.html
+++ b/Works/works.html
@@ -15,9 +15,11 @@
 
   <!-- Indicatore fisso in basso: data, ora, reality, posizione cursore -->
   <div id="layout-indicator">
-    <div class="date-time" id="date-time">--:--:--</div>
-    <div id="reality-number">Reality: 0</div>
-    <div id="cursor-pos">Cursor: 0, 0</div>
+    <span class="date-time"></span>
+    <div>
+      <span id="layout-text"></span>
+      <span id="cursor-position" style="margin-left: 15px;"></span>
+    </div>
   </div>
 
   <script src="Works.js"></script>
