--- a/Works/works.html
+++ b/Works/works.html
@@ -13,7 +13,7 @@
     <div class="work-details" id="work-details">Seleziona un progetto</div>
   </div>
 
-  <!-- Indicatore fisso in basso: data, ora, reality, posizione cursore -->
+  <!-- Indicatore fisso in basso -->
   <div id="layout-indicator">
     <span class="date-time"></span>
     <div>
