--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Home</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Works</title>
+  <link rel="stylesheet" href="Works.css" />
 </head>
 <body>
 
-  <div class="center-container" id="text-container">
-    <!-- Le scritte saranno generate con JS -->
+  <div class="works-container">
+    <div class="works-list" id="works-list"></div>
+    <div class="work-details" id="work-details">Seleziona un progetto</div>
   </div>
 
+  <!-- Indicatore fisso in basso -->
   <div id="layout-indicator">
     <span class="date-time"></span>
     <div>
@@ -20,6 +22,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="Works.js"></script>
 </body>
 </html>
