--- a/Works/works.html
+++ b/Works/works.html
@@ -8,17 +8,14 @@
 </head>
 <body>
 
-  <div class="works-container">
-    <div class="works-list" id="works-list"></div>
-    <div class="work-details" id="work-details">Seleziona un progetto</div>
-  </div>
+  <div class="works-grid" id="works-grid"></div>
 
   <!-- Indicatore fisso in basso -->
   <div id="layout-indicator">
     <span class="date-time"></span>
     <div>
-      <span id="layout-text"></span>
-      <span id="cursor-position" style="margin-left: 15px;"></span>
+      <span id="reality-number"></span>
+      <span id="cursor-pos" style="margin-left: 15px;"></span>
     </div>
   </div>
 
