--- a/Works/works.html
+++ b/Works/works.html
@@ -8,7 +8,33 @@
 </head>
 <body>
 
-  <div class="works-grid" id="works-grid"></div>
+  <div class="works-grid" id="works-grid">
+
+    <!-- Esempio di progetto -->
+    <div class="work-square">
+      <img src="immagini/progetto1.jpg" alt="Progetto 1" />
+      <div class="work-overlay">
+        <div class="work-title">Progetto 1</div>
+      </div>
+    </div>
+
+    <div class="work-square">
+      <img src="immagini/progetto2.jpg" alt="Progetto 2" />
+      <div class="work-overlay">
+        <div class="work-title">Progetto 2</div>
+      </div>
+    </div>
+
+    <div class="work-square">
+      <img src="immagini/progetto3.jpg" alt="Progetto 3" />
+      <div class="work-overlay">
+        <div class="work-title">Progetto 3</div>
+      </div>
+    </div>
+
+    <!-- Aggiungi altri progetti qui seguendo lo stesso schema -->
+
+  </div>
 
   <!-- Indicatore fisso in basso -->
   <div id="layout-indicator">
