--- a/Works/works.html
+++ b/Works/works.html
@@ -9,31 +9,7 @@
 <body>
 
   <div class="works-grid" id="works-grid">
-
-    <!-- Esempio di progetto -->
-    <div class="work-square">
-      <img src="immagini/progetto1.jpg" alt="Progetto 1" />
-      <div class="work-overlay">
-        <div class="work-title">Progetto 1</div>
-      </div>
-    </div>
-
-    <div class="work-square">
-      <img src="immagini/progetto2.jpg" alt="Progetto 2" />
-      <div class="work-overlay">
-        <div class="work-title">Progetto 2</div>
-      </div>
-    </div>
-
-    <div class="work-square">
-      <img src="immagini/progetto3.jpg" alt="Progetto 3" />
-      <div class="work-overlay">
-        <div class="work-title">Progetto 3</div>
-      </div>
-    </div>
-
-    <!-- Aggiungi altri progetti qui seguendo lo stesso schema -->
-
+    <!-- I contenuti verranno generati dal JS -->
   </div>
 
   <!-- Indicatore fisso in basso -->
