--- a/Works/works.html
+++ b/Works/works.html
@@ -12,12 +12,11 @@
     <!-- I contenuti verranno generati dal JS -->
   </div>
 
-  <!-- Indicatore fisso in basso -->
   <div id="layout-indicator">
     <span class="date-time"></span>
     <div>
-      <span id="reality-number"></span>
-      <span id="cursor-pos" style="margin-left: 15px;"></span>
+      <span id="layout-text"></span>
+      <span id="cursor-position" style="margin-left: 15px;"></span>
     </div>
   </div>
 
