--- a/Works/works.html
+++ b/Works/works.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Works</title>
-  <link rel="stylesheet" href="Works.css" />
+  <link rel="stylesheet" href="works.css" />
 </head>
 <body>
 
-  <div class="works-grid" id="works-grid">
-    <!-- I contenuti verranno generati dal JS -->
+  <div class="works-container" id="works-container">
+    <!-- I quadrati verranno generati via JS -->
   </div>
 
   <div id="layout-indicator">
@@ -20,6 +20,6 @@
     </div>
   </div>
 
-  <script src="Works.js"></script>
+  <script src="works.js"></script>
 </body>
 </html>
