--- a/Works/Works.html
+++ b/Works/Works.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Works</title>
-  <link rel="stylesheet" href="works.css" />
+  <link rel="stylesheet" href="Works.css" />
 </head>
 <body>
 
@@ -20,6 +20,6 @@
     </div>
   </div>
 
-  <script src="works.js"></script>
+  <script src="Works.js"></script>
 </body>
 </html>
