--- a/Works/Works.html
+++ b/Works/Works.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Works</title>
-  <link rel="stylesheet" href="Works/Works.css" />
+  <title>works</title>
+  <link rel="stylesheet" href="works/works.css" />
 </head>
 <body>
 
@@ -20,6 +20,6 @@
     </div>
   </div>
 
-  <script src="Works/Works.js"></script>
+  <script src="works/works.js"></script>
 </body>
 </html>
