--- a/works/works.html
+++ b/works/works.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Works</title>
+  <title>works</title>
   <link rel="stylesheet" href="works.css" />
 </head>
 <body>
