--- a/works/works.html
+++ b/works/works.html
@@ -12,12 +12,12 @@
     <!-- I quadrati verranno generati via JS -->
   </div>
 
-  <div id="layout-indicator">
-    <span class="date-time"></span>
-    <div>
-      <span id="layout-text"></span>
-      <span id="cursor-position" style="margin-left: 15px;"></span>
-    </div>
+ <div id="layout-footer">
+  <span class="date-time"></span>
+  <span id="layout-text">Reality</span>
+  <span id="cursor-position"></span>
+</div>
+
   </div>
 
   <script src="works.js"></script>
