--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Le scritte saranno generate con JS -->
   </div>
 
+  <!-- Fascia in basso -->
   <div id="layout-indicator">
     <span class="date-time"></span>
     <div>
