--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -9,7 +9,7 @@
 <body>
   <div class="project-container">
     <h1 class="project-title">Miesian House</h1>
-    <img src="../img/miesianhouse.jpg" alt="Miesian House" class="project-image" />
+    <img src="/img/miesianhouse.jpg" alt="Miesian House" class="project-image" />
     <p class="project-description">
       Progetto residenziale ispirato alla purezza spaziale e strutturale dell’architettura di Mies van der Rohe. La casa si sviluppa attraverso volumi puri e trasparenze calibrate.
     </p>
