--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -16,7 +16,8 @@
     <a href="../works/works.html" id="back-link">← Back to works</a>
   </div>
 
-  <div id="layout-indicator">
+  <!-- Fascia colorata in basso -->
+  <div id="layout-footer">
     <span class="date-time"></span>
     <span id="layout-text">Reality</span>
     <span id="cursor-position"></span>
