--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Miesian House</title>
-  <link rel="stylesheet" href="miesianhouse.css" />
-</head>
 <body>
   <div class="project-container">
     <h1 class="project-title">Miesian House</h1>
@@ -16,15 +8,15 @@
     <a href="../works/works.html" id="back-link">← Back to works</a>
   </div>
 
-  <!-- Fascia colorata in basso -->
-  <div id="layout-footer">
-    <span class="date-time"></span>
-    <span id="layout-text">Reality</span>
-    <span id="cursor-position"></span>
+  <div id="layout-footer" style="--reality-color: #123456;"> <!-- imposta qui il colore dinamico via inline o via JS -->
+    <div id="layout-indicator">
+      <span class="date-time"></span>
+      <span id="layout-text">Reality</span>
+      <span id="cursor-position"></span>
+    </div>
   </div>
 
   <div id="custom-cursor">+</div>
 
   <script src="miesianhouse.js"></script>
 </body>
-</html>
