--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -13,7 +13,8 @@
     <p class="project-description">
       Progetto residenziale ispirato alla purezza spaziale e strutturale dell’architettura di Mies van der Rohe. La casa si sviluppa attraverso volumi puri e trasparenze calibrate.
     </p>
-    <a href="./works.html" id="back-link">← Back to works</a>
+    <!-- Link corretto: usa ../works/works.html con query string per mantenere parametri -->
+    <a href="#" id="back-link">← Back to works</a>
   </div>
 
   <!-- Fascia colorata in basso -->
