--- a/works/works.html
+++ b/works/works.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>works</title>
+  <title>Works</title>
   <link rel="stylesheet" href="works.css" />
 </head>
 <body>
@@ -12,11 +12,14 @@
     <!-- I quadrati verranno generati via JS -->
   </div>
 
+  <!-- Fascia colorata in basso -->
   <div id="layout-footer">
     <span class="date-time"></span>
     <span id="layout-text">Reality</span>
     <span id="cursor-position"></span>
   </div>
+
+  <div id="custom-cursor">+</div>
 
   <script src="works.js"></script>
 </body>
