--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -11,7 +11,22 @@
     <h1 class="project-title">Miesian House</h1>
     <img src="/img/miesianhouse.jpg" alt="Miesian House" class="project-image" />
     <p class="project-description">
-      Progetto residenziale ispirato alla purezza spaziale e strutturale dell’architettura di Mies van der Rohe. La casa si sviluppa attraverso volumi puri e trasparenze calibrate.
+      when
+oct. 2022
+
+why
+Design a “miesian  house” in a lot of 20x50m . 
+
+
+
+
+
+
+So I designed a house developed entirely on the ground floor, all the spaces are grouped under a single roof that rests like a lid on the perimeter walls of the house and the lot. 
+The house is raised above the ground by a base of 30cm. 
+The service rooms conceived as boxes in the middle of the space with natural lighting. 
+No wall ever touches the two windows that face the two internal gardens, thus ensuring the continuity of the facade. 
+The plan follows orthogonal lines between them, is clear, simple and rational.
     </p>
     <a href="#" id="back-link">← Back to works</a>
   </div>
