--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -27,6 +27,16 @@ No wall ever touches the two windows that face the two internal gardens, thus en
       
 The plan follows orthogonal lines between them, is clear, simple and rational.
     </p>
+    
+     <!-- NUOVA SEZIONE IMMAGINI -->
+  <div class="additional-images">
+    <img src="/img/image1.jpg" alt="Descrizione immagine 1" class="additional-image" />
+    <img src="/img/image2.jpg" alt="Descrizione immagine 2" class="additional-image" />
+    <img src="/img/image3.jpg" alt="Descrizione immagine 3" class="additional-image" />
+  </div>
+
+  <a href="#" id="back-link">← Back to works</a>
+</div>
     <a href="#" id="back-link">← Back to works</a>
   </div>
 
