--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -30,9 +30,11 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
     
      <!-- NUOVA SEZIONE IMMAGINI -->
   <div class="additional-images">
-    <img src="/img/image1.jpg" alt="Descrizione immagine 1" class="additional-image" />
-    <img src="/img/image2.jpg" alt="Descrizione immagine 2" class="additional-image" />
-    <img src="/img/image3.jpg" alt="Descrizione immagine 3" class="additional-image" />
+    <img src="/img/miesianhouse01.jpg" alt="Descrizione immagine 1" class="additional-image" />
+    <img src="/img/miesianhouse02.jpg" alt="Descrizione immagine 2" class="additional-image" />
+    <img src="/img/miesianhouse03.jpg" alt="Descrizione immagine 3" class="additional-image" />
+    <img src="/img/miesianhouse04.jpg" alt="Descrizione immagine 3" class="additional-image" />
+    <img src="/img/miesianhouse05.jpg" alt="Descrizione immagine 3" class="additional-image" />
   </div>
 
   <a href="#" id="back-link">← Back to works</a>
