--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </div>
 
   <!-- Fascia in basso -->
-  <div id="layout-indicator">
+  <div id="layout-footer">
     <span class="date-time"></span>
     <div>
       <span id="layout-text"></span>
