--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
 
-  <div class="center-container" id="text-container">
-    <!-- Le scritte saranno generate con JS -->
-  </div>
+  <!-- Contenitore centrale (parole generate da JS) -->
+  <div class="center-container" id="text-container"></div>
 
   <!-- Fascia in basso -->
   <div id="layout-footer">
