--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -9,7 +9,7 @@
 <body>
   <div class="project-container">
     <h1 class="project-title">Miesian House</h1>
-    <img src="/img/miesianhouse.jpg" alt="Miesian House" class="project-image" />
+    <img src="/img/miesianhouse/miesianhouse.jpg" alt="Miesian House" class="project-image" />
     <p class="project-description">
 <strong>when</strong>
 oct. 2022
@@ -29,10 +29,10 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
     
     <!-- NUOVA SEZIONE IMMAGINI -->
     <div class="additional-images">
-      <img src="/img/miesianhouse01.jpg" alt="Descrizione immagine 1" class="additional-image" />
-      <img src="/img/miesianhouse02.jpg" alt="Descrizione immagine 2" class="additional-image" />
-      <img src="/img/miesianhouse03.jpg" alt="Descrizione immagine 3" class="additional-image" />
-      <img src="/img/miesianhouse04.jpg" alt="Descrizione immagine 4" class="additional-image" />
+      <img src="/img/miesianhouse/miesianhouse01.jpg" alt="Descrizione immagine 1" class="additional-image" />
+      <img src="/img/miesianhouse/miesianhouse02.jpg" alt="Descrizione immagine 2" class="additional-image" />
+      <img src="/img/miesianhouse/miesianhouse03.jpg" alt="Descrizione immagine 3" class="additional-image" />
+      <img src="/img/miesianhouse/miesianhouse04.jpg" alt="Descrizione immagine 4" class="additional-image" />
     </div>
 
     <a href="#" id="back-link">← Back to works</a>
