--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -27,12 +27,24 @@ No wall ever touches the two windows that face the two internal gardens, thus en
 The plan follows orthogonal lines between them, is clear, simple and rational.
     </p>
     
-    <!-- NUOVA SEZIONE IMMAGINI -->
+    <!-- NUOVA SEZIONE IMMAGINI CON DESCRIZIONE -->
     <div class="additional-images">
-      <img src="/img/miesianhouse/miesianhouse01.jpg" alt="Descrizione immagine 1" class="additional-image" />
-      <img src="/img/miesianhouse/miesianhouse02.jpg" alt="Descrizione immagine 2" class="additional-image" />
-      <img src="/img/miesianhouse/miesianhouse03.jpg" alt="Descrizione immagine 3" class="additional-image" />
-      <img src="/img/miesianhouse/miesianhouse04.jpg" alt="Descrizione immagine 4" class="additional-image" />
+      <figure class="additional-image">
+        <img src="/img/miesianhouse/miesianhouse01.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+      <figure class="additional-image">
+        <img src="/img/miesianhouse/miesianhouse02.jpg" alt="Descrizione immagine 2" />
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
+      <figure class="additional-image">
+        <img src="/img/miesianhouse/miesianhouse03.jpg" alt="Descrizione immagine 3" />
+        <figcaption>Descrizione immagine 3</figcaption>
+      </figure>
+      <figure class="additional-image">
+        <img src="/img/miesianhouse/miesianhouse04.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
     </div>
 
     <a href="#" id="back-link">← Back to works</a>
