--- a/works/works.html
+++ b/works/works.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+allora ti incollo i 3 codici, aggiornali riscrivendoli completamente facendo queste due operazioni: 
+- eliminare la patina colorata sopra le immagini al passaggio del mouse
+- tutti i testi e gli elementi della pagina (eccetto ovviamente le immagini) hanno il colore della reality.
+html: <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
