--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -27,7 +27,7 @@ No wall ever touches the two windows that face the two internal gardens, thus en
 The plan follows orthogonal lines between them, is clear, simple and rational.
     </p>
     
-    <!-- NUOVA SEZIONE IMMAGINI CON DESCRIZIONE -->
+    <!-- Sezione immagini con descrizione -->
     <div class="additional-images">
       <figure class="additional-image">
         <img src="/img/miesianhouse/miesianhouse01.jpg" alt="Descrizione immagine 1" />
