--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -45,6 +45,119 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
         <img src="/img/tetra/tetra04.jpg" alt="Descrizione immagine 4" />
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
+      <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra04.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+        <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra05.jpg" alt="Descrizione immagine 5" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+          <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra06.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+            <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra07.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+              <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra08.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra09.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                  <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra10.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                    <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra11.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                      <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra12.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                        <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra13.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                          <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra14.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                            <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra15.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                              <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra16.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra17.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                  <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra18.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                    <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra19.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                      <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra20.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                        <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra21.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                          <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra22.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                            <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra23.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                              <div class="additional-images">
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra24.jpg" alt="Descrizione immagine 1" />
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+                                                  <figure class="additional-image">
+        <img src="/img/tetra/tetra25.jpg" alt="Descrizione immagine 2" />
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
+                                                  <figure class="additional-image">
+        <img src="/img/tetra/tetra26.jpg" alt="Descrizione immagine 2" />
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
     </div>
 
     <a href="#" id="back-link">← Back to works</a>
