--- a/projects/hypogeum/hypogeum.html
+++ b/projects/hypogeum/hypogeum.html
@@ -45,6 +45,23 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
         <img src="/img/hypogeum/hypogeum04.jpg" alt="Descrizione immagine 4" />
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
+      <figure class="additional-image">
+        <img src="/img/hypogeum/hypogeum05.jpg" alt="Descrizione immagine 2" />
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
+      <figure class="additional-image">
+        <img src="/img/hypogeum/hypogeum06.jpg" alt="Descrizione immagine 2" />
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
+      <figure class="additional-image">
+        <img src="/img/hypogeum/hypogeum07.jpg" alt="Descrizione immagine 2" />
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
+      <figure class="additional-image">
+        <img src="/img/hypogeum/hypogeum08.jpg" alt="Descrizione immagine 2" />
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
+      
     </div>
 
     <a href="#" id="back-link">← Back to works</a>
