--- a/projects/houseatelier/houseatelier.html
+++ b/projects/houseatelier/houseatelier.html
@@ -45,6 +45,10 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
         <img src="/img/houseatelier/houseatelier04.jpg" alt="Descrizione immagine 4" />
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
+         <figure class="additional-image">
+        <img src="/img/houseatelier/houseatelier05.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
     </div>
 
     <a href="#" id="back-link">← Back to works</a>
