--- a/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
+++ b/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
@@ -44,6 +44,27 @@ Rather than a closed enclosure, it acts as a permeable platform, where calibrate
         <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit04.jpg" alt="Descrizione immagine 4" />
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
+            <figure class="additional-image">
+        <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit05.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
+            <figure class="additional-image">
+        <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit06.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
+            <figure class="additional-image">
+        <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit07.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
+            <figure class="additional-image">
+        <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit08.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
+            <figure class="additional-image">
+        <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit09.jpg" alt="Descrizione immagine 4" />
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
+      
     </div>
 
     <a href="#" id="back-link">← Back to works</a>
