--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -28,7 +28,7 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
     </p>
     
     <!-- Sezione immagini con descrizione -->
-    <div class="additional-images">
+    <div class="image-grid">
       <figure class="additional-image">
         <img src="/img/tetra/tetra01.jpg" alt="Descrizione immagine 1" />
         <figcaption>Descrizione immagine 1</figcaption>
