--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -166,6 +166,12 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
       </figure>
 
     </div>
+    
+    <!-- Modal per fullscreen -->
+<div class="image-modal" id="imageModal">
+  <span class="close-btn">&times;</span>
+  <img src="" alt="Fullscreen image" />
+</div>
 
     <a href="#" id="back-link">← Back to works</a>
   </div>
