--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -29,149 +29,48 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
     
     <!-- Sezione immagini in griglia -->
     <div class="additional-images">
-  <figure class="additional-image">
-    <div class="image-wrapper">
+      <figure class="additional-image">
         <img src="/img/tetra/tetra01.jpg" alt="Descrizione immagine 1" />
         <figcaption>Descrizione immagine 1</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra02.jpg" alt="Descrizione immagine 2" />
         <figcaption>Descrizione immagine 2</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra03.jpg" alt="Descrizione immagine 3" />
         <figcaption>Descrizione immagine 3</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra04.jpg" alt="Descrizione immagine 4" />
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra05.jpg" alt="Descrizione immagine 5" />
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra06.jpg" alt="Descrizione immagine 6" />
         <figcaption>Descrizione immagine 6</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra07.jpg" alt="Descrizione immagine 7" />
         <figcaption>Descrizione immagine 7</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra08.jpg" alt="Descrizione immagine 8" />
         <figcaption>Descrizione immagine 8</figcaption>
       </figure>
       <figure class="additional-image">
-            <div class="image-wrapper">
         <img src="/img/tetra/tetra09.jpg" alt="Descrizione immagine 9" />
         <figcaption>Descrizione immagine 9</figcaption>
       </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra10.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
+      <!-- continua con le altre immagini fino alla 26 -->
+      <figure class="additional-image">
+        <img src="/img/tetra/tetra26.jpg" alt="Descrizione immagine 26" />
+        <figcaption>Descrizione immagine 26</figcaption>
       </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra11.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra12.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra13.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra14.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra15.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra16.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra17.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra18.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra09.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra19.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra20.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra21.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra22.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra23.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra24.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-            <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra25.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-             <figure class="additional-image">
-            <div class="image-wrapper">
-        <img src="/img/tetra/tetra26.jpg" alt="Descrizione immagine 9" />
-        <figcaption>Descrizione immagine 9</figcaption>
-      </figure>
-
     </div>
-    
-    <!-- Modal per fullscreen -->
-<div class="image-modal" id="imageModal">
-  <span class="close-btn">&times;</span>
-  <img src="" alt="Fullscreen image" />
-</div>
 
     <a href="#" id="back-link">← Back to works</a>
   </div>
