--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -81,4 +81,7 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
 
   <script src="tetra.js"></script>
 </body>
+  <div id="imageModal">
+  <span class="close-btn">×</span>
+  <img src="" alt="preview immagine">
 </html>
