--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -80,8 +80,9 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
   <div id="custom-cursor">+</div>
 
   <script src="tetra.js"></script>
-</body>
   <div id="imageModal">
   <span class="close-btn">×</span>
   <img src="" alt="preview immagine">
+</div>
+</body>
 </html>
