--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -28,61 +28,64 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
     </p>
     
     <!-- Sezione immagini in griglia -->
-<div class="additional-images">
-  <figure class="additional-image">
-    <div class="image-frame">
-      <img src="/img/tetra/tetra01.jpg" alt="Descrizione immagine 1" />
+    <div class="additional-images">
+      <figure class="additional-image">
+        <div class="image-frame">
+          <img src="/img/tetra/tetra01.jpg" alt="Descrizione immagine 1" />
+        </div>
+        <figcaption>Descrizione immagine 1</figcaption>
+      </figure>
+
+      <figure class="additional-image">
+        <div class="image-frame">
+          <img src="/img/tetra/tetra02.jpg" alt="Descrizione immagine 2" />
+        </div>
+        <figcaption>Descrizione immagine 2</figcaption>
+      </figure>
+
+      <figure class="additional-image">
+        <div class="image-frame">
+          <img src="/img/tetra/tetra03.jpg" alt="Descrizione immagine 3" />
+        </div>
+        <figcaption>Descrizione immagine 3</figcaption>
+      </figure>
+
+      <figure class="additional-image">
+        <div class="image-frame">
+          <img src="/img/tetra/tetra04.jpg" alt="Descrizione immagine 4" />
+        </div>
+        <figcaption>Descrizione immagine 4</figcaption>
+      </figure>
+
+      <figure class="additional-image">
+        <div class="image-frame">
+          <img src="/img/tetra/tetra05.jpg" alt="Descrizione immagine 5" />
+        </div>
+        <figcaption>Descrizione immagine 5</figcaption>
+      </figure>
+
+      <!-- ... continua fino a tetra26 con lo stesso schema -->
     </div>
-    <figcaption>Descrizione immagine 1</figcaption>
-  </figure>
-
-  <figure class="additional-image">
-    <div class="image-frame">
-      <img src="/img/tetra/tetra02.jpg" alt="Descrizione immagine 2" />
-    </div>
-    <figcaption>Descrizione immagine 2</figcaption>
-  </figure>
-
-  <figure class="additional-image">
-    <div class="image-frame">
-      <img src="/img/tetra/tetra03.jpg" alt="Descrizione immagine 3" />
-    </div>
-    <figcaption>Descrizione immagine 3</figcaption>
-  </figure>
-
-    <figure class="additional-image">
-    <div class="image-frame">
-      <img src="/img/tetra/tetra04.jpg" alt="Descrizione immagine 3" />
-    </div>
-    <figcaption>Descrizione immagine 3</figcaption>
-  </figure>
-
-    <figure class="additional-image">
-    <div class="image-frame">
-      <img src="/img/tetra/tetra05.jpg" alt="Descrizione immagine 3" />
-    </div>
-    <figcaption>Descrizione immagine 3</figcaption>
-  </figure>
-
-
-
-  </div>
 
     <a href="#" id="back-link">← Back to works</a>
   </div>
 
+  <!-- Fascia footer -->
   <div id="layout-footer">
     <span class="date-time"></span>
     <span id="layout-text">Reality</span>
     <span id="cursor-position"></span>
   </div>
 
+  <!-- Cursore personalizzato -->
   <div id="custom-cursor">+</div>
 
-  <script src="tetra.js"></script>
+  <!-- Modal fullscreen -->
   <div id="imageModal">
-  <span class="close-btn">×</span>
-  <img src="" alt="preview immagine">
-</div>
+    <span class="close-btn">×</span>
+    <img src="" alt="preview immagine">
+  </div>
+
+  <script src="tetra.js"></script>
 </body>
 </html>
