--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Archive Exhibit Inhabit</title>
+  <title>Tetra</title>
   <link rel="stylesheet" href="tetra.css" />
 </head>
 <body>
